--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "postcss": "^8.4.35",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.11.0",
