feat: Add Vercel rewrites for API and auth routes and configure dynamic Google OAuth callback URL.

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -5,6 +5,14 @@
   "outputDirectory": "dist",
   "rewrites": [
     {
+      "source": "/api/(.*)",
+      "destination": "https://rent-info-4798.vercel.app/api/$1"
+    },
+    {
+      "source": "/auth/(.*)",
+      "destination": "https://rent-info-4798.vercel.app/auth/$1"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
