feat: set up initial Express backend server with core middleware, routes, and environment configuration.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,5 @@ GOOGLE_CLIENT_SECRET=ENTER_YOUR_CLIENT_SECRET
 SESSION_SECRET=supersecretkey
 PORT=5000
 NODE_ENV=development
+JWT_SECRET=thisismysecretkey12345
+ACCOUNT_CREATION_KEY=somecreationkey
